UX: remove hero skeletons and show only CMS text; eliminate i18n fallbacks to prevent flicker. SEO: add JSON-LD for GymDetail; add author to PostDetail. i18n: footer social keys (ru/en/ro). A11y: Contact list roles/aria, image-proxy usage stays. Perf/Security: minor header tweaks. Gallery: better alt texts.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -226,6 +226,7 @@
   "contact": {
     "title": "Contact",
     "subtitle": "Get in touch with us",
+    "openMap": "Open Map",
     "heroTitle": "Contact Us",
     "heroSubtitle": "We are always ready to answer your questions",
     "heroDescription": "Call, write or visit us at any of our gyms",
@@ -433,6 +434,13 @@
     "description": "Professional badminton club in Chisinau",
     "quickLinks": "Quick Links",
     "followUs": "Follow Us",
+    "socialMedia": "Social Media",
+    "social": {
+      "facebook": "Facebook",
+      "instagram": "Instagram",
+      "youtube": "YouTube",
+      "tiktok": "TikTok"
+    },
     "allRightsReserved": "All rights reserved",
     "contact": {
       "address": "Chisinau, Example str. 123",
