--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -251,6 +251,118 @@
           "description": "Специализируется на обучении детей от 6 до 16 лет, создании игровой атмосферы на тренировках."
         }
       }
+    },
+    "strategy": {
+      "title": "Стратегия развития бадминтонного клуба ALTIUS на 2025 – 2030 гг.",
+      "mission": {
+        "title": "Введение и миссия клуба",
+        "text1": "ALTIUS — это современный бадминтонный клуб, созданный для развития спорта на всех уровнях: от первых шагов детей до международных побед профессионалов. Наша миссия — сделать бадминтон массовым, доступным и престижным видом спорта в Молдове, формируя сильное сообщество спортсменов, тренеров и болельщиков.",
+        "text2": "Мы верим, что через спорт можно воспитывать характер, дисциплину и стремление к высоким результатам. Altius стремится стать ведущим центром развития бадминтона в стране и одним из узнаваемых клубов Восточной Европы."
+      },
+      "currentState": {
+        "title": "Текущее состояние и потенциал",
+        "intro": "Сегодня Altius уже имеет прочный фундамент:",
+        "points": [
+          "современный тренировочный зал в Кишинёве",
+          "опытных тренеров и мотивированных спортсменов",
+          "участие в национальных и международных соревнованиях",
+          "растущее сообщество любителей и детей, начинающих заниматься бадминтоном"
+        ],
+        "conclusion": "Однако потенциал клуба значительно больше. Бадминтон в Молдове находится на этапе роста, и Altius способен стать лидером этого движения, определяя стандарты и формируя целую экосистему развития спорта."
+      },
+      "goals": {
+        "title": "Стратегические цели на 2025 – 2030 гг.",
+        "items": [
+          "Создать ведущий центр подготовки спортсменов в стране и вывести их на международный уровень",
+          "Сделать бадминтон массовым видом спорта среди детей, подростков и взрослых",
+          "Расширить сеть филиалов клуба и присутствие в ключевых городах страны",
+          "Создать сильный бренд ALTIUS — узнаваемый в Молдове и за её пределами",
+          "Построить устойчивую экосистему партнёров, спонсоров и образовательных программ"
+        ]
+      },
+      "roadmap": {
+        "title": "Дорожная карта развития по годам",
+        "2025": {
+          "title": "Старт масштабирования и систематизация",
+          "points": [
+            "Провести внутренний аудит клуба: сильные стороны, потребности, инфраструктура",
+            "Разработать и внедрить единую тренировочную методику для всех возрастов",
+            "Создать Altius Academy — образовательную программу для детей и тренеров",
+            "Запустить 2–3 региональные программы популяризации бадминтона (мастер-классы, дни открытых дверей)",
+            "Начать ежегодную Super Liga Altius с системой рейтингов и финальными наградами"
+          ]
+        },
+        "2026": {
+          "title": "Рост и региональное расширение",
+          "points": [
+            "Открыть филиалы или партнёрские школы в 2 новых городах",
+            "Организовать первый международный юношеский турнир под брендом ALTIUS",
+            "Запустить онлайн-платформу с обучающими материалами и тренировками",
+            "Создать команду по продвижению и маркетингу (контент, соцсети, сайт, PR)",
+            "Начать сотрудничество с 3–5 школами и спортивными центрами по всей стране"
+          ]
+        },
+        "2027": {
+          "title": "Национальное лидерство",
+          "points": [
+            "Altius становится основным центром подготовки национальной сборной",
+            "Проведение серии национальных турниров под брендом клуба",
+            "Создание скаутской системы: регулярный отбор талантливых детей по всей стране",
+            "Запуск программы «Badminton в каждую школу» — внедрение секций в учебные заведения",
+            "Формирование первой профессиональной команды клуба для участия в международных лигах"
+          ]
+        },
+        "2028": {
+          "title": "Международное признание",
+          "points": [
+            "Регулярное участие спортсменов клуба в международных турнирах и юношеских чемпионатах Европы",
+            "Организация собственного международного турнира в Кишинёве",
+            "Создание тренировочной базы с инфраструктурой для сборов и лагерей",
+            "Развитие программы стажировок и обмена опытом с европейскими клубами и федерациями"
+          ]
+        },
+        "2029": {
+          "title": "Этап устойчивости и влияния",
+          "points": [
+            "Altius — главный центр бадминтона Молдовы с филиалами в 5+ городах",
+            "Выпуск первых спортсменов-чемпионов Европы/мира",
+            "Формирование собственного тренерского центра и сертификационной программы",
+            "Выход на уровень сотрудничества с международными федерациями и брендами",
+            "Altius становится не просто клубом, а полноценной академией и брендом национального масштаба"
+          ]
+        }
+      },
+      "marketing": {
+        "title": "Маркетинг и бренд",
+        "points": [
+          "Создать уникальный стиль и позиционирование ALTIUS как символа роста и силы",
+          "Вести активную работу в соцсетях, публикуя достижения спортсменов, истории успеха и полезные советы",
+          "Запустить линейку клубного мерча (форма, аксессуары, экипировка)",
+          "Создавать вдохновляющий контент: видеоролики, интервью, мини-документалки о спортсменах",
+          "Организовать клубные праздники и события для родителей, партнёров и спортсменов"
+        ]
+      },
+      "partnerships": {
+        "title": "Партнёрства и устойчивость",
+        "points": [
+          "Заключить стратегические партнёрства с федерацией бадминтона, школами и университетами",
+          "Привлечь корпоративных спонсоров из спортивной и образовательной сфер",
+          "Внедрить модель членства и абонементов для стабильного дохода",
+          "Искать гранты и международные спортивные программы поддержки"
+        ]
+      },
+      "results": {
+        "title": "Ожидаемые результаты к 2030 году",
+        "points": [
+          "Более 2000 активных спортсменов в системе клуба",
+          "Присутствие в 5+ городах и создание собственной тренировочной базы",
+          "Спортсмены клуба участвуют и побеждают на чемпионатах Европы и мира",
+          "Программа подготовки тренеров и собственная академия",
+          "Устойчивое сообщество родителей, тренеров, партнёров и выпускников",
+          "Altius становится брендом №1 в бадминтоне Молдовы и известным клубом в Восточной Европе"
+        ]
+      },
+      "closing": "Altius 2030 — это не просто клуб. Это движение, которое растит чемпионов, создаёт сообщество и формирует будущее бадминтона в стране."
     }
   },
   "contact": {
