Fix CMS multilingual support and trainer display
- Fixed gyms page CMS data loading with language parameter
- Added missing translation keys for gyms (trainers, features, gallery, contact)
- Improved trainer photo display on About page (larger, circular, better styling)
- Fixed translation key references in GymDetail component
- Added home.services translation keys for all languages
- Set Romanian as default language with proper localStorage handling
- Fixed CMS dev markers and cache clearing in development mode
- Enhanced trainer description styling with structured formatting support

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -480,6 +480,23 @@
       "trial": "Trial session"
     },
     "loading": "Loading gyms...",
+    "trainers": {
+      "title": "Gym Trainers"
+    },
+    "features": {
+      "title": "Gym Features"
+    },
+    "gallery": {
+      "title": "Gym Gallery"
+    },
+    "contact": {
+      "title": "Contact Information",
+      "address": "Address",
+      "phone": "Phone",
+      "email": "Email",
+      "signUp": "Sign up for training",
+      "openMap": "Open map"
+    },
     "fallback": {
       "byArrangement": "By arrangement",
       "flexibleSchedule": "Flexible schedule tailored to your needs",
@@ -585,6 +602,13 @@
   }
   ,
   "home": {
+    "services": {
+      "title": "Our Services",
+      "subtitle": "Professional training for all skill levels",
+      "more": "Learn more",
+      "pricePlaceholder": "—",
+      "empty": "Services section is not yet filled in CMS"
+    },
     "achievements": {
       "title": "Our Achievements",
       "subtitle": "Over the years we have achieved impressive results and nurtured many talented athletes",
