--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -511,6 +511,23 @@
       "trial": "Пробное занятие"
     },
     "loading": "Загрузка залов...",
+    "trainers": {
+      "title": "Тренеры зала"
+    },
+    "features": {
+      "title": "Особенности зала"
+    },
+    "gallery": {
+      "title": "Галерея зала"
+    },
+    "contact": {
+      "title": "Контактная информация",
+      "address": "Адрес",
+      "phone": "Телефон",
+      "email": "Email",
+      "signUp": "Записаться на тренировку",
+      "openMap": "Открыть карту"
+    },
     "fallback": {
       "byArrangement": "По договоренности",
       "flexibleSchedule": "Гибкое расписание под ваши потребности",
@@ -616,6 +633,13 @@
   }
   ,
   "home": {
+    "services": {
+      "title": "Наши услуги",
+      "subtitle": "Профессиональные тренировки для всех уровней подготовки",
+      "more": "Узнать больше",
+      "pricePlaceholder": "—",
+      "empty": "Секция услуг пока не заполнена в CMS"
+    },
     "achievements": {
       "title": "Наши достижения",
       "subtitle": "За годы работы мы достигли впечатляющих результатов и воспитали множество талантливых спортсменов",
