UI improvements: removed pricing section and signup button from gyms, removed coaches section from gallery, commented out history section in about page, fixed text colors

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -513,8 +513,7 @@
     "heroSubtitle": "See our halls and training atmosphere",
     "heroDescription": "Photos from training, tournaments and daily club life",
     "sections": {
-      "hall": "Training Halls",
-      "coaches": "Our Coaches",
+      "hall": "Halls",
       "trainings": "Training Sessions",
       "tournaments": "Tournaments"
     },
