--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -544,8 +544,7 @@
     "heroSubtitle": "Посмотрите на наши залы и атмосферу тренировок",
     "heroDescription": "Фотографии с тренировок, турниров и повседневной жизни клуба",
     "sections": {
-      "hall": "Тренировочные залы",
-      "coaches": "Наши тренеры",
+      "hall": "Залы",
       "trainings": "Тренировки",
       "tournaments": "Турниры"
     },
