feat: Social Media Hub with live embeds (TikTok, YouTube API, Facebook) + site width 1600px
- Added SocialMediaHubLive component with Facebook + TikTok side by side, YouTube below
- Integrated YouTube Data API for real video fetching
- Created youtube-videos API route
- Expanded site container width from 1280px to 1600px
- Hidden CmsEmbedsSection from home page
- Added socialHub translations (ru/en/ro)

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -706,5 +706,14 @@
       "badge": "🏸 Club",
       "readOnFb": "Read on Facebook"
     }
+  },
+  "socialHub": {
+    "badge": "We're on social media",
+    "title": "Live: Altius on Social Media",
+    "subtitle": "Follow our training sessions, tournaments and club news",
+    "followUs": "Follow us on",
+    "subscribe": "Subscribe",
+    "noContent": "Content coming soon",
+    "openOn": "Open on"
   }
 }
