--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -743,5 +743,14 @@
       "btnAllNews": "Все новости",
       "btnCalendar": "Календарь событий"
     }
+  },
+  "socialHub": {
+    "badge": "Мы в соцсетях",
+    "title": "Live: Altius в соцсетях",
+    "subtitle": "Следите за нашими тренировками, турнирами и новостями клуба",
+    "followUs": "Подписывайтесь на наш",
+    "subscribe": "Подписаться",
+    "noContent": "Контент скоро появится",
+    "openOn": "Открыть на"
   }
 }
